petclinic-eks-deployment/_eks_cluster_security_group.tf
resource "aws_security_group" "eks_cluster" {
  name        = "${var.eks_cluster_name}-security_group"
  description = "Cluster communication with worker nodes"
  vpc_id      = aws_vpc.custom_vpc.id
  tags        = merge({ Name = "${var.eks_cluster_name}-${var.environment}-security-group" }, tomap(var.additional_tags))
}

resource "aws_security_group_rule" "cluster_inbound" {
  description              = "Allow worker nodes to communicate with the cluster API Server"
  from_port                = 443
  protocol                 = "tcp"
  security_group_id        = aws_security_group.eks_cluster.id
  source_security_group_id = aws_security_group.eks_nodes.id
  to_port                  = 443
  type                     = "ingress"
}

resource "aws_security_group_rule" "cluster_outbound" {
  description              = "Allow cluster API Server to communicate with the worker nodes"
  from_port                = 1024
  protocol                 = "tcp"
  security_group_id        = aws_security_group.eks_cluster.id
  source_security_group_id = aws_security_group.eks_nodes.id
  to_port                  = 65535
  type                     = "egress"
}
